--- a/style.css
+++ b/style.css
@@ -725,6 +725,16 @@ body {
   border-bottom: 0.25vh solid;
 }
 
+.eat_source{
+  position:absolute;
+  width:100%;
+  height:50%;
+  top:50%;
+  left:0;
+  font-size:2vh;
+  color:rgba(240, 235, 216, 0.25);
+}
+
 .eat_btn {
   position: absolute;
   width: 80%;
