--- a/rwd.css
+++ b/rwd.css
@@ -1,45 +1,206 @@
-@media screen and (max-width: 1200px) {
+@media (max-width: 1200px) {
 
+    .pick {
+        /* width: 67.5%; */
+        width: 70%;
+    }
+
+    .pick_area {
+        width: 49%;
+    }
+
+    .pick_img {
+        height: 60%;
+    }
+   
     .link_text {
-        font-size: 2.25vh;
+        font-size: 1.1rem;
     }
 
-    .link_text:active {
-        font-size: 2.75vh;
+    .menu_bg{
+        height: 100dvh;
+    }
+}
+
+/*@media screen and (max-width: 900px) {
+
+    #slide1:checked~#controls label:nth-child(2),
+    #slide2:checked~#controls label:nth-child(3),
+    #slide3:checked~#controls label:nth-child(4),
+    #slide4:checked~#controls label:nth-child(1),
+    #slide1:checked~#controls label:nth-last-child(2),
+    #slide2:checked~#controls label:nth-last-child(3),
+    #slide3:checked~#controls label:nth-last-child(4),
+    #slide4:checked~#controls label:nth-last-child(1) {
+        margin: 0;
     }
 
-    .link_arrow {
-        width: 2vh;
-        height: 2vh;
-        top: 45%;
+    #slides {
+        max-width: calc(100% - 140px);
+        margin: 0 auto;
+    }
+} */
+
+@media (max-width: 540px) {
+    #bg {
+        width: 100vw;
+        height: 500vh;
     }
 
-    .open_content{
-        top:55%;
+    .ending_bg{
+        width: auto;
+        height: 100dvh;
+        transform: translateX(-40%);
+        /* text-align: center; */
     }
 
-    .eat{
-        width: 67.5%;
+    .open_content {
+        left: 7.5%;
+        width: 90%;
+        top: 50%;
+        font-size: 15px;
     }
 
-    .eat_word{
-        font-size: 2.75vh;
+    .info {
+        left: 7.5%;
+        font-size: 30px;
+    }
+
+    .info::before {
+        display: none;
+    }
+
+    .content {
+        font-size: 15px;
+    }
+
+    .ep{
+        margin-top: -60%;
+    }
+
+    .web,
+    .pick,
+    .source {
+        width: 85%;
+        height: 60%;
+        left: 7.5%;
+        top: 35%;
     }
 
     .web{
-        width: 72.5%;
+        flex-direction: column;
     }
 
-    .web_link{
-        width: 22vh;
-        height: 22vh;
+    .web_card{
+        width: 100%;
+        height: 47%;
     }
 
-    .pick{
-        width: 67.5%;
+    .pick {
+        align-content: flex-start;
+    }
+
+    .pick_area {
+        width: 100%;
+        height: 23%;
+        margin: 10px 0;
+    }
+
+    .pick_title {
+        font-size: 15px;
+    }
+
+    .source{
+        height: 50%;
+    }
+
+    .source a{
+        font-size: 15px;
+        /* border: 1px solid; */
+    }
+
+    #footer_content {
+        width: 90%;
+    }
+
+    .footer_logo {
+        width: 100%;
+    }
+
+    .foot_img {
+        height: 50%;
+    }
+
+    .copyright {
+        margin-top: -30px;
+    }
+
+    .link_content {
+        display: none;
+    }
+
+    .sns_btn {
+        background-color: #f0ebd8;
+    }
+
+    #toggle {
+        width: 10vh;
+        height: 10vh;
+        top: 5vh;
+        left: 93%;
+        transform: translate(-50%, -50%);
+    }
+
+    #menu {
+        width: 100vw;
+        height: 10vh;
+        left: 0;
+        top: 0;
+    }
+
+    .menu_bg {
+        background-image: url("./img/bg/loading_bg.jpg");
+        width: 110vw;
+        /* width: 105vw; */
+        /* height: 120vh; */
+        height: 120dvh;
+        left: 0vw;
+        /* top: -150vh; */
+        top:-150dvh;
+        transition: 1s;
+    }
+
+    .hamburger {
+        width: 10vh;
+        height: 10vh;
+        top: 50%;
+        left: 90%;
+        transform: translate(-50%, -50%);
+    }
+
+    #toggle:checked~.menu_bg {
+        /* transform: translateY(140vh); */
+        transform: translateY(140dvh);
+        transition: 1s;
+    }
+
+    .menu_link_content {
+        width: 100%;
+        height: 60%;
+    }
+
+    .menu_link,
+    .menu_link.m_big {
+        font-size: 26px;
+    }
+
+    .m_span {
+        font-size: 12px;
     }
 
     .sns_content.s_menu {
-        width: 17.5%;
+        width: 40%;
+        left: 5%;
+        top: 80%;
     }
 }
